# oxide

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  state.md  structure_analysis.md
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: pr.yml
crates/arch/boot-aarch64/: Cargo.toml
crates/arch/boot-aarch64/src/: limine.rs  pl011.rs
crates/arch/boot-x86_64/: Cargo.toml
crates/arch/boot-x86_64/src/: lib.rs  limine.rs  uart.rs
crates/block/: Cargo.toml
crates/boot-aarch64/: Cargo.toml
crates/boot-aarch64/src/: dtb.rs  lib.rs  limine.rs  pl011.rs
crates/boot-info/: Cargo.toml
crates/boot-info/src/: lib.rs
crates/boot-x86_64/: Cargo.toml
crates/boot-x86_64/src/: lib.rs  limine.rs  uart.rs
crates/crc/: Cargo.toml
crates/dev-misc/: Cargo.toml
crates/devfs/: Cargo.toml
crates/devfs/src/: lib.rs
crates/dl/: Cargo.toml
crates/drivers/drv-virtio-gpu/: Cargo.toml
crates/drivers/drv-virtio-gpu/src/: lib.rs  post_init.rs
crates/drivers/drv-virtio-input/: Cargo.toml
crates/drivers/drv-virtio-input/src/: devfs.rs  drain.rs  evdev_queue.rs  keymap.rs  lib.rs
crates/drivers/drv-virtio-net/: Cargo.toml
crates/drivers/drv-virtio-net/src/: legacy.rs  lib.rs  modern.rs
crates/drm/: Cargo.toml
crates/drv/: Cargo.toml
crates/drv-virtio-gpu/: Cargo.toml
crates/drv-virtio-gpu/src/: lib.rs
crates/drv-virtio-input/: Cargo.toml
crates/elf/: Cargo.toml
crates/epoll/: Cargo.toml
crates/epoll/src/: lib.rs
crates/err/: Cargo.toml
crates/ext4/: Cargo.toml
crates/fbcon/: Cargo.toml
crates/fbdev/: Cargo.toml
crates/firmware/: Cargo.toml
crates/flock/: Cargo.toml
crates/hal-aarch64/: Cargo.toml
crates/hal-aarch64/src/: context.rs  fault.rs  fpu.rs  lib.rs  mmu_ops.rs  pl011.rs  regs.rs  smp.rs  timer.rs  vbar.rs  vmm.rs
crates/hal-x86_64/: Cargo.toml
crates/hal-x86_64/src/: context.rs  cpuid.rs  fault.rs  fpu.rs  gdt.rs  idt.rs  irq.rs  lib.rs  mmu.rs  mmu_ops.rs  pci.rs  regs.rs  syscall.rs  tss.rs  vmm.rs
crates/inflate/: Cargo.toml
crates/inotify/: Cargo.toml
crates/iouring/: Cargo.toml
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  signal_tests.rs  sysv_shm.rs
crates/jbd2/: Cargo.toml
crates/kalloc/: Cargo.toml
crates/kernel-bin-aarch64/: Cargo.toml  build.rs
crates/kernel-bin-x86_64/: Cargo.toml  build.rs
crates/kernel-bin-x86_64/src/: main.rs
crates/keyring/: Cargo.toml
crates/klog/: Cargo.toml
crates/limine-proto/: Cargo.toml
crates/modules/: Cargo.toml
crates/net/: Cargo.toml
crates/net/src/: addr.rs  arp.rs  ethernet.rs  icmp.rs  icmpv6.rs  lib.rs  loopback.rs  ndp.rs  netdev.rs  pkt.rs  route.rs  stack.rs  tcp_conn.rs  tcp_hdr.rs  udp.rs  unix_sock.rs
crates/perf/: Cargo.toml
crates/pipe/: Cargo.toml
crates/pipe/src/: lib.rs
crates/pmm/: Cargo.toml
crates/pmm-setup/: Cargo.toml
crates/pmm/src/: lib.rs  page_meta.rs  tests.rs
crates/sched/: Cargo.toml
crates/sched/src/: clock.rs  cmdline.rs  kthread.rs  lib.rs  registry.rs  rlimit.rs  task.rs  tests.rs
crates/signalfd/: Cargo.toml
crates/timerfd/: Cargo.toml
crates/timerfd/src/: lib.rs
crates/userfaultfd/: Cargo.toml
crates/xattr/: Cargo.toml
docs/: 00-master-plan.md  00-v2.md  01-glossary-and-types.md  02-spec-discipline.md  03-modernity.md  04-performance.md  05-pre-mortem.md  06-memory-model.md  07-toolchain-and-targets.md  08-ai-density.md  09-abbreviations.md  10-pmm.md  11-vmm.md  12-slab.md  13-sched.md  14-context-switch.md  15-syscall-abi.md  16-vfs.md  17-block-and-pagecache.md  18-modules.md  19-dev-proc-sysfs.md  20-hal-x86_64.md  21-hal-aarch64.md  22-irq-and-exceptions.md  23-time.md  24-ipc.md  25-net.md  26-namespaces-cgroups.md  27-security.md  28-tty-pty.md  29-init-and-userspace.md  29a-userspace-platform.md  30-io-uring.md  31-elf-loader.md  32-power-reset.md  33-firmware-tables.md  34-pci-and-pcie.md  35-drivers.md  36-bootloader-handoff.md  37-observability.md  (+22 more)
kernel/: Cargo.toml
kernel/blobs/: hello.elf  init-aarch64.elf  init.elf  rootfs.img  sh.elf  sigtest.elf  tmpfstest.elf
kernel/src/: acpi.rs  arm_timer.rs  canary.rs  coredump.rs  cpu_topology.rs  debug_macros.rs  dev_bpf.rs  dev_console.rs  dev_drm.rs  dev_epoll.rs  dev_ext4.rs  dev_fbdev.rs  dev_inotify.rs  dev_input.rs  dev_misc.rs  dev_modules.rs  dev_net.rs  dev_pidfd.rs  dev_pipe.rs  dev_proc_ns.rs  dev_pty.rs  dev_signalfd.rs  dev_timerfd.rs  dev_tracefs.rs  dev_virtio_gpu_modern.rs  dev_virtio_net.rs  dev_virtio_net_boot.rs  dev_virtio_net_modern.rs  devfs.rs  device_map_smoke.rs  elf_load.rs  elf_smoke.rs  elf_smoke_arm.rs  exec_stack.rs  flock.rs  futex.rs  gic.rs  hostname.rs  inode_times.rs  io_uring.rs  (+74 more)
kernel/src/dev/: console.rs  drm.rs  mod.rs  pidfd.rs  pty.rs  tracefs.rs  virtio_net.rs  virtio_net_modern.rs
kernel/src/ipc/: futex.rs  mod.rs  posix_mq.rs  sysv_msg.rs  sysv_sem.rs
kernel/src/pci_boot/: mod.rs  virtio_drv.rs
kernel/src/procfs/: fs_impl.rs  mod.rs  pid_status.rs  proc_links.rs  smaps.rs  static_files.rs
kernel/src/sched/: balance.rs  mod.rs  registry.rs  runqueue.rs  schedule.rs  spawn.rs  wait_list.rs  zombies.rs
kernel/src/smoke/: canary.rs  device_map.rs  elf.rs  elf_arm.rs  ksched.rs  mmuops.rs  mod.rs  preempt.rs  user_map.rs  userspace.rs  userspace_arm.rs
kernel/src/syscalls/: anonfd.rs  chroot.rs  clock_nanosleep.rs  clone.rs  compat.rs  cred.rs  execve.rs  falloc.rs  fs.rs  futex_waitv.rs  hostname.rs  hwrng.rs  ioctl.rs  landlock.rs  misc.rs  mmap_file.rs  mod.rs  mount.rs  namei.rs  net.rs  newfstatat.rs  open.rs  pathresolve.rs  perms.rs  poll.rs  prctl.rs  priority.rs  proc.rs  proclink.rs  ptrace_fpu.rs  pvmrw.rs  rseq.rs  select.rs  signal.rs  time.rs  timers.rs  trace.rs  uname.rs  utime.rs  wait.rs  (+1 more)
link/: aarch64-kernel.ld  x86_64-kernel.ld
targets/: aarch64-unknown-oxide-kernel.json  x86_64-unknown-oxide-kernel.json
tools/: accept.py  boot-smoke.sh  fetch-cross.sh  fetch-vendor.sh  project-stats.sh  run-smokes.sh  rust_stats.py
vdso/: build.sh  vdso-aarch64.S  vdso-x86_64.S  vdso.lds
(+607 files in other folders)
