[workspace]
resolver = "2"
members = ["tools/spec-lint", "tools/xtask", "kernel", "crates/hal", "crates/hal-x86_64", "crates/hal-aarch64", "crates/klog", "crates/sync", "crates/kalloc", "crates/limine-proto", "crates/boot-x86_64", "crates/boot-aarch64", "crates/kernel-bin-x86_64", "crates/kernel-bin-aarch64", "crates/pmm", "crates/slab", "crates/vmm", "crates/sched", "crates/syscall", "crates/vfs", "crates/block", "crates/ext4", "crates/jbd2", "crates/modules", "crates/procfs", "crates/ipc", "crates/security", "crates/nscg", "crates/net", "crates/tty", "crates/iouring", "crates/elf", "crates/power", "crates/firmware", "crates/pci", "crates/drv", "crates/obs", "crates/err", "crates/crc", "crates/virtio", "crates/dl", "crates/nss", "crates/crypt", "crates/pam", "crates/svc", "crates/rpm", "crates/cpio"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "limited"
overflow-checks = false
incremental = false

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 16
panic = "abort"
debug = "full"
overflow-checks = true
incremental = true
