[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
block   = { path = "../crates/block" }
boot-info = { path = "../crates/boot-info" }
cpu       = { path = "../crates/cpu" }
devfs     = { path = "../crates/devfs" }
dev-misc  = { path = "../crates/dev-misc", default-features = false }
keyring   = { path = "../crates/keyring" }
xattr     = { path = "../crates/xattr" }
ipc       = { path = "../crates/ipc" }
pipe      = { path = "../crates/pipe", default-features = false }
pmm-setup = { path = "../crates/pmm-setup" }
smp       = { path = "../crates/smp" }
epoll     = { path = "../crates/epoll" }
flock     = { path = "../crates/flock" }
signalfd  = { path = "../crates/signalfd" }
userfaultfd = { path = "../crates/userfaultfd" }
elf     = { path = "../crates/elf" }
net     = { path = "../crates/net" }
modules = { path = "../crates/modules" }
pci     = { path = "../crates/pci" }
virtio  = { path = "../crates/virtio" }
ext4    = { path = "../crates/ext4" }
hal     = { path = "../crates/hal" }
klog    = { path = "../crates/klog" }
kalloc  = { path = "../crates/kalloc" }
pmm     = { path = "../crates/pmm" }
procfs  = { path = "../crates/procfs" }
sched   = { path = "../crates/sched" }
sync    = { path = "../crates/sync" }
syscall = { path = "../crates/syscall" }
tty     = { path = "../crates/tty" }
vfs     = { path = "../crates/vfs" }
vmm     = { path = "../crates/vmm" }
power    = { path = "../crates/power" }
firmware = { path = "../crates/firmware" }
nscg     = { path = "../crates/nscg" }
security = { path = "../crates/security" }
drv             = { path = "../crates/drv" }
drv-virtio-gpu    = { path = "../crates/drv-virtio-gpu" }
drv-virtio-input  = { path = "../crates/drv-virtio-input" }
drm               = { path = "../crates/drm" }
fbdev             = { path = "../crates/fbdev" }
fbcon             = { path = "../crates/fbcon" }
vt                = { path = "../crates/vt" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../crates/hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../crates/hal-aarch64" }

[features]
default = []
# Per `docs/04§3` (rev R05): per-subsystem debug features. Off = call
# sites absent from the binary; the hot path emits zero bytes. Names
# match the spec's bucket list 1:1 — independence guarantee in §3.
debug-pmm  = []  # PMM smoke + stress + memmap dump
debug-vmm  = []  # device-map MMIO sanity reads (HPET cap, GICD typer)
debug-irq  = []  # LAPIC/GIC enable diag + timer-IRQ soak + tick logs
debug-acpi = ["firmware/debug-acpi"]  # forwarded; impl in crates/firmware
debug-sched = ["sched/debug-sched"]  # first-kthread coroutine smoke + Context::switch trace
debug-boot = ["pipe/debug-boot", "dev-misc/debug-boot"]  # operational-pulse trace (init started, pmm: ready, …)
debug-modules = []  # kmod thunk write_raw / kassert traces
debug-syscall = []  # per-syscall trace (nr, sys_clone/execve/exit/wait4 lines)
debug-all  = ["debug-pmm","debug-vmm","debug-irq","debug-acpi","debug-sched","debug-boot","debug-modules","debug-syscall"]

