[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
block   = { path = "../crates/kernel/block" }
boot-info = { path = "../crates/shared/boot-info" }
cpu       = { path = "../crates/kernel/cpu" }
devfs     = { path = "../crates/kernel/devfs" }
keyring   = { path = "../crates/kernel/keyring" }
xattr     = { path = "../crates/kernel/xattr" }
inotify   = { path = "../crates/kernel/inotify" }
timerfd   = { path = "../crates/kernel/timerfd" }
ptrace    = { path = "../crates/kernel/ptrace" }
perf      = { path = "../crates/kernel/perf" }
tmpfs     = { path = "../crates/kernel/tmpfs", default-features = false }
coredump  = { path = "../crates/kernel/coredump" }
elf-load  = { path = "../crates/kernel/elf-load" }
msi       = { path = "../crates/kernel/msi" }
procfs-meminfo = { path = "../crates/kernel/procfs-meminfo" }
ipc       = { path = "../crates/kernel/ipc" }
pipe      = { path = "../crates/kernel/pipe", default-features = false }
pmm-setup = { path = "../crates/kernel/pmm-setup" }
smp       = { path = "../crates/kernel/smp" }
epoll     = { path = "../crates/kernel/epoll" }
flock     = { path = "../crates/kernel/flock" }
signalfd  = { path = "../crates/kernel/signalfd" }
userfaultfd = { path = "../crates/kernel/userfaultfd" }
elf     = { path = "../crates/shared/elf" }
net     = { path = "../crates/kernel/net" }
modules = { path = "../crates/kernel/modules" }
pci     = { path = "../crates/drivers/pci" }
virtio  = { path = "../crates/drivers/virtio" }
ext4    = { path = "../crates/kernel/ext4" }
hal     = { path = "../crates/arch/hal" }
klog    = { path = "../crates/shared/klog" }
kalloc  = { path = "../crates/shared/kalloc" }
pmm     = { path = "../crates/kernel/pmm" }
procfs  = { path = "../crates/kernel/procfs" }
sched   = { path = "../crates/kernel/sched" }
sync    = { path = "../crates/shared/sync" }
syscall = { path = "../crates/kernel/syscall" }
tty     = { path = "../crates/kernel/tty" }
vfs     = { path = "../crates/kernel/vfs" }
vmm     = { path = "../crates/kernel/vmm" }
power    = { path = "../crates/kernel/power" }
firmware = { path = "../crates/kernel/firmware" }
nscg     = { path = "../crates/kernel/nscg" }
security = { path = "../crates/kernel/security" }
drv             = { path = "../crates/drivers/drv" }
drv-virtio-gpu    = { path = "../crates/drivers/drv-virtio-gpu" }
drv-virtio-input  = { path = "../crates/drivers/drv-virtio-input" }
drm               = { path = "../crates/drivers/drm" }
fbdev             = { path = "../crates/drivers/fbdev" }
fbcon             = { path = "../crates/drivers/fbcon" }
vt                = { path = "../crates/drivers/vt" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../crates/arch/hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../crates/arch/hal-aarch64" }

[features]
default = []
# Per `docs/04§3` (rev R05): per-subsystem debug features. Off = call
# sites absent from the binary; the hot path emits zero bytes. Names
# match the spec's bucket list 1:1 — independence guarantee in §3.
debug-pmm  = []  # PMM smoke + stress + memmap dump
debug-vmm  = []  # device-map MMIO sanity reads (HPET cap, GICD typer)
debug-irq  = []  # LAPIC/GIC enable diag + timer-IRQ soak + tick logs
debug-acpi = ["firmware/debug-acpi"]  # forwarded; impl in crates/firmware
debug-sched = ["sched/debug-sched"]  # first-kthread coroutine smoke + Context::switch trace
debug-boot = ["pipe/debug-boot", "tmpfs/debug-boot", "drv-virtio-gpu/debug-boot", "devfs/debug-boot"]  # operational-pulse trace (init started, pmm: ready, …)
debug-modules = []  # kmod thunk write_raw / kassert traces
debug-syscall = []  # per-syscall trace (nr, sys_clone/execve/exit/wait4 lines)
debug-all  = ["debug-pmm","debug-vmm","debug-irq","debug-acpi","debug-sched","debug-boot","debug-modules","debug-syscall"]

