[package]
name = "boot-aarch64"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
kernel      = { path = "../../kernel" }
klog        = { path = "../klog" }
hal         = { path = "../hal" }
hal-aarch64 = { path = "../hal-aarch64" }
sync        = { path = "../sync" }

[features]
default = []
hosted  = []
