[package]
name = "boot-aarch64"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
kernel       = { path = "../../kernel" }
klog         = { path = "../klog" }
hal          = { path = "../hal" }
hal-aarch64  = { path = "../hal-aarch64" }
limine-proto = { path = "../limine-proto" }
sync         = { path = "../sync" }

[features]
default    = []
hosted     = []
# Per `04§4.0` (R06): gates this crate's klog call sites
# (UART sink install + CPU/MMU dump + pl011 sink swap) so
# default builds emit zero log bytes. Mirrors `kernel`'s
# `debug-boot`; xtask `--features debug-boot` enables both
# because cargo applies `--features` to every selected `-p`
# package that declares it.
debug-boot = []
debug-all  = ["debug-boot"]
