[package]
name = "boot-info"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# Boot-stub → kernel handoff types per `36`. Parsed by per-arch boot
# stubs (Limine on x86_64, EDK2/U-Boot DTB on aarch64) and consumed
# by the kernel + every domain crate that needs the memmap, HHDM
# offset, RSDP, SMP info, or boot-time entropy. Pure types — no
# allocator, no syscall, no logging — so it sits at the shared
# layer per `52§3` (`52§7`: arch → shared → domain).

[dependencies]
