[package]
name = "boot-x86_64"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
kernel       = { path = "../../kernel" }
klog         = { path = "../klog" }
hal          = { path = "../hal" }
hal-x86_64   = { path = "../hal-x86_64" }
limine-proto = { path = "../limine-proto" }
sync         = { path = "../sync" }

[features]
default = []
hosted  = []
