[package]
name = "dev-misc"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# /dev/null /dev/zero /dev/full /dev/random /dev/urandom /dev/kmsg
# pseudo-devices per `52§3` domain layer. Pure VFS-inode producers.

[dependencies]
devfs = { path = "../devfs" }
hal   = { path = "../hal" }
klog  = { path = "../klog" }
sync  = { path = "../sync" }
vfs   = { path = "../vfs" }

[features]
default = []
# Per `04§3` R06 — gates the boot-time dev-misc-smoke klog::write_raw.
debug-boot = []
