[package]
name = "flock"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# flock(2) advisory locking per `52§3` domain layer. Per-inode lock
# table keyed by Arc::as_ptr inode identity.

[dependencies]
sched   = { path = "../sched" }
sync    = { path = "../sync" }
syscall = { path = "../syscall" }
vfs     = { path = "../vfs" }
