[package]
name = "hal-x86_64"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal      = { path = "../hal" }
klog     = { path = "../klog" }
sync     = { path = "../sync" }
syscall  = { path = "../syscall" }
pci      = { path = "../pci" }
bitflags = { version = "2", default-features = false }

[features]
default   = []
# Per `04§4.0` (R06): gates this crate's klog call sites — the
# CPU-exception fault printer (`fault.rs`) emits via klog::write_raw
# / write_hex_u64 only under `debug-irq`. Default builds halt
# silently on a fault. Mirrors `kernel`'s `debug-irq` so xtask
# `--features debug-irq` enables both.
debug-irq = []
debug-all = ["debug-irq"]
