[package]
name = "inotify"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"

# inotify(7) inode + watch list per `52§3` domain layer.

[dependencies]
devfs   = { path = "../devfs" }
hal     = { path = "../hal" }
pipe    = { path = "../pipe" }
sched   = { path = "../sched" }
sync    = { path = "../sync" }
syscall = { path = "../syscall" }
vfs     = { path = "../vfs" }
