[package]
name = "ipc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal     = { path = "../hal" }
klog    = { path = "../klog" }
sync    = { path = "../sync" }
sched   = { path = "../sched" }
syscall = { path = "../syscall" }
vmm     = { path = "../vmm" }

[features]
default = []
hosted  = []
