[package]
name = "kernel-bin-x86_64"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "oxide-x86_64"
path = "src/main.rs"

[dependencies]
boot-x86_64 = { path = "../boot-x86_64" }
klog        = { path = "../klog" }

[features]
default     = ["debug-panic"]
debug-panic = []
