[package]
name = "perf"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"

# perf_event_open(2) per-task counters per `52§3` domain layer.
# v1 reads HW PMC (x86 PERF_GLOBAL_*; arm PMU regs).

[dependencies]
hal     = { path = "../hal" }
sched   = { path = "../sched" }
sync    = { path = "../sync" }
syscall = { path = "../syscall" }
vfs     = { path = "../vfs" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../hal-aarch64" }
