[package]
name = "pipe"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# Anonymous pipe + eventfd inode types per `52§3` domain layer.
# Backs sys_pipe2, sys_eventfd, dup-style sharing. Pure VFS-inode
# producer; no kernel-runtime singletons (sched/devfs free).

[dependencies]
hal  = { path = "../hal" }
klog = { path = "../klog" }
sync = { path = "../sync" }
vfs  = { path = "../vfs" }

[features]
default = []
# Per `04§3` R06 — gates the boot-time pipe-evt-smoke `klog::write_raw`.
# Forwarded by kernel `--features debug-boot` via the kernel crate.
debug-boot = []
