[package]
name = "pmm-setup"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# PMM bring-up adapter per `10§6.3` boot rule + `52§3` domain layer.
# Bridges `boot-info` (memmap walk) → `pmm` (allocator init,
# bitmap pool carving, per-PFN PageMeta install) → `vmm`
# (set_anon_rmap_for_pa typed adapter for AnonVma slot ownership).
# F156 rmap glue lives here so the PMM crate stays pure data.

[dependencies]
boot-info = { path = "../boot-info" }
hal       = { path = "../hal" }
pmm       = { path = "../pmm" }
vmm       = { path = "../vmm" }
klog      = { path = "../klog" }
sync      = { path = "../sync" }
