[package]
name = "pmm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal      = { path = "../hal" }
klog     = { path = "../klog" }
sync     = { path = "../sync" }
bitflags = { version = "2", default-features = false }

[dev-dependencies]
proptest = "1"
