[package]
name = "sched"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal  = { path = "../hal" }
klog = { path = "../klog" }
sync = { path = "../sync" }
vfs  = { path = "../vfs" }
vmm  = { path = "../vmm" }

# kthread coroutine smoke needs the per-arch Context concrete type
# (52a B-0 staging — once the schedule() wiring also moves into
# this crate, the rest of kernel/src/sched/ folds in alongside).
[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../hal-aarch64" }

[features]
default = []
hosted  = []
# Per `04§3` R06 — gates the kthread coroutine boot smoke. Kernel
# forwards via `--features debug-sched`.
debug-sched = []
