[package]
name = "signalfd"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# signalfd(2) inode per `52§3` domain layer. Drains pending signals
# off the current task into a 128-byte ssi struct on read.

[dependencies]
hal     = { path = "../hal" }
sched   = { path = "../sched" }
sync    = { path = "../sync" }
syscall = { path = "../syscall" }
vfs     = { path = "../vfs" }
