[package]
name = "timerfd"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"

# timerfd_create/settime/gettime per `52§3` domain layer. Reads
# monotonic_ns through hal::TimerOps; per-arch concrete impl
# selected via target-conditional dep.

[dependencies]
hal     = { path = "../hal" }
sched   = { path = "../sched" }
sync    = { path = "../sync" }
syscall = { path = "../syscall" }
vfs     = { path = "../vfs" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../hal-aarch64" }
