[package]
name = "userfaultfd"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

# userfaultfd(2) inode per `52§3` domain layer. Userspace page-fault
# handling — postcopy live migration / Boehm GC backing.

[dependencies]
sched = { path = "../sched" }
sync  = { path = "../sync" }
syscall = { path = "../syscall" }
vfs   = { path = "../vfs" }
hal   = { path = "../hal" }
