[package]
name = "boot-aarch64"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
kernel       = { path = "../../../kernel" }
klog         = { path = "../../shared/klog" }
hal          = { path = "../../arch/hal" }
hal-aarch64  = { path = "../../arch/hal-aarch64" }
limine-proto = { path = "../../arch/limine-proto" }
sync         = { path = "../../shared/sync" }

[features]
default    = []
hosted     = []
# Per `04§4.0` (R06): gates this crate's klog call sites
# (UART sink install + CPU/MMU dump + pl011 sink swap) so
# default builds emit zero log bytes. Mirrors `kernel`'s
# `debug-boot`; xtask `--features debug-boot` enables both
# because cargo applies `--features` to every selected `-p`
# package that declares it.
debug-boot = []
# Pass-through to `hal-aarch64`'s `debug-irq`. See the matching
# comment in `crates/boot-x86_64/Cargo.toml` — xtask only `-p`s
# kernel + boot-aarch64 + kernel-bin-aarch64, so hal-aarch64's
# debug-irq has to ride through this chain to take effect.
debug-irq  = ["hal-aarch64/debug-irq"]
debug-all  = ["debug-boot", "debug-irq"]
