[package]
name = "drv-virtio-gpu"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal     = { path = "../../arch/hal" }
klog    = { path = "../../shared/klog" }
drv     = { path = "../../drivers/drv" }
virtio  = { path = "../../drivers/virtio" }
sync    = { path = "../../shared/sync" }
drm     = { path = "../../drivers/drm" }
