[package]
name = "drv-virtio-input"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hal     = { path = "../../arch/hal" }
klog    = { path = "../../shared/klog" }
drv     = { path = "../../drivers/drv" }
virtio  = { path = "../../drivers/virtio" }
sync    = { path = "../../shared/sync" }
devfs   = { path = "../../kernel/devfs" }
syscall = { path = "../../kernel/syscall" }
vfs     = { path = "../../kernel/vfs" }
softirq = { path = "../../kernel/softirq" }
tty     = { path = "../../kernel/tty" }
pmm     = { path = "../../kernel/mm-pmm" }
sched   = { path = "../../kernel/sched" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
hal-x86_64 = { path = "../../arch/hal-x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../../arch/hal-aarch64" }
